# system-info-reporter

./: LICENSE  README.md  pyproject.toml  setup.py
system_info_reporter/: __init__.py  main.py  monitor.py
system_info_reporter_kopila.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
