[project]
name = "system-info-reporter-kopila"
version = "0.0.1"
authors = [
  { name="Kopila Devkota", email="your-email@example.com" },
]
description = "A Python tool to monitor CPU, memory, and disk usage"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "psutil"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"

[project.urls]
Homepage = "https://github.com/your-username/system-info-reporter"
Issues = "https://github.com/your-username/system-info-reporter/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["system_info_reporter"]